proj1/tests/error/bad_width2.tx
\textwidth{-3}
sdfs fsd fds

\textwidth{343}
dsfdsfs df sd